--- a/package.json
+++ b/package.json
@@ -2,8 +2,21 @@
   "name": "grocery_list",
   "version": "1.0.0",
   "description": "Gracery list application",
-  "main": "app.ts",
+  "main": "index.ts",
   "repository": "https://github.com/francislagueu/groceries_list.git",
-  "author": "Francis Lagueu",
-  "license": "MIT"
+  "author": "Francis Lagueu <lagson6@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "start": "node ./dist/index.js",
+    "start:dev": "nodemon --exec ts-node ./src/index.ts"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "nodemon": "^1.18.5",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.4"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
