--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/node": "^10.12.1",
     "nodemon": "^1.18.5",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.4"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "pg": "^7.6.0",
+    "reflect-metadata": "^0.1.12",
+    "typeorm": "^0.2.8"
   }
 }
