--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start:dev": "nodemon --exec ts-node ./src/index.ts"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/node": "^10.12.1",
     "nodemon": "^1.18.5",
@@ -18,10 +20,13 @@
     "typescript": "^3.1.4"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "pg": "^7.6.0",
     "reflect-metadata": "^0.1.12",
-    "typeorm": "^0.2.8"
+    "typeorm": "^0.2.8",
+    "volleyball": "^1.5.1"
   }
 }
