--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "start:dev": "nodemon --exec ts-node ./src/index.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/node": "^10.12.1",
     "nodemon": "^1.18.5",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.3.0",
     "pg": "^7.6.0",
     "reflect-metadata": "^0.1.12",
     "typeorm": "^0.2.8",
